--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -1,4 +1,29 @@
+{# templates/wild/show.html.twig #}
 {% extends 'base.html.twig' %}
+{% block title %}{{ slug }}{% endblock %}
+
 {% block body %}
-    <h1>{{ slug }}</h1>
+
+    <div class="media">
+        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <div class="media-body">
+            <h1 class="mt-0">{{ program.title }}</h1>
+            <p>{{ program.summary }}</p>
+            <p>Catégorie : {{ program.category.name }}</p>
+        </div>
+    </div>
+
+    <a href="{{ path('wild_index') }}">
+        Retour à l'accueil
+    </a>
+
+    <a href="{{ path('wild_show', { 'slug': "walking-dead" }) }}">
+        Testing show() method from WildController with a real program s slug.
+    </a>
+    <br>
+    <a href="{{ path('wild_index') }}">
+        Testing index() method from WildController to view all programs.
+    </a>
+
 {% endblock %}
+
