--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,50 +1,31 @@
 {% block header %}
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Wild Séries</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Accueil<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/program/">Liste des séries</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/season/">Liste des saisons</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/episode/">Liste des episodes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/actor/">Liste des acteurs</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    {% if app.user %}
-                        <a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a>
-                    {% else %}
-                        <a class="nav-link" href="{{ path('app_login') }}"> Se connecter</a>
-                    {% endif %}
-                </li>
-            </ul>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="/">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/nope">Originals<span class="sr-only">(current)</span></a>
+      </li>
+        <a class="nav-link" href="/wild">Series</a>
+        <a class="nav-link" href="/nope">Movies</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Genres
+        </a>
+        <div class="dropdown-menu" aria-labelledby="Genres">
+          <a class="dropdown-item" href="/wild/category/horreur">Horror</a>
+          <a class="dropdown-item" href="/nope">Action</a>
+          <a class="dropdown-item" href="/nope">Animation</a>
+          <a class="dropdown-item" href="/nope">Fantasy</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/nope">More</a>
         </div>
-    </nav>
-</header>
-
+      </li>
+    </ul>
+  </div>
+</nav>
 {% endblock %} 
-
-
-
