--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -9,7 +9,7 @@
             <p><strong>Categorie :</strong> {{ program.category.name }}</p>
             <ul>
                 {% for season in seasons %}
-                    <a href="{{ path('wild_show_season', {id: season.id}) }}" class="btn btn-success"> <strong>Saison :</strong> {{ season.number }} </a>
+                    <a href="{{ path('show_season', {id: season.id}) }}" class="btn btn-success"> <strong>Saison :</strong> {{ season.number }} </a>
                     <li><strong>Année :</strong> {{ season.year }}</li>
                     <li><strong>Déscription :</strong> {{ season.description }}</li><br>
                 {% endfor %}
