--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -9,4 +9,5 @@
    <a href="{{ path('show_program', { 'programName': "walking-dead" }) }}">L'URL renvoi sur la page de la série "the walking dead"</a>
    <br>
    <a href="{{ path('show_program', { 'programName': "the-haunting-of-hill-house" }) }}">L'URL renvoi sur la page de la série "the haunting of a hill house</a>
+    <a href="/category/add">L'URL renvoi sur la page "ajouter une catégorie"</a>
    {% endblock %}
