--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -8,10 +8,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/nope">Originals<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Originals<span class="sr-only">(current)</span></a>
       </li>
-        <a class="nav-link" href="/wild">Series</a>
-        <a class="nav-link" href="/nope">Movies</a>
+        <a class="nav-link" href="/Program/">Liste des Series</a>
+        <a class="nav-link" href="/season/">Liste des saisons</a>
+        <a class="nav-link" href="/episode/">Liste des episodes</a>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Genres
