--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -3,80 +3,32 @@
 {% block title %}Episode{% endblock %}
 
 {% block body %}
-    <section class="card text-dark m-3 p-3">
-        <div class="card-header bg-success">
-            <h1>Episode {{ episode.number }} de la série {{ season.program.title }}</h1>
-        </div>
-        <div class="media">
-            <table class="table table-light table-striped table-bordered mt-3">
-                <tbody>
-                <tr>
-                    <th class="thead-dark">Série</th>
-                    <td>{{ episode.season.program.title }}</td>
-                </tr>
-                <tr>
-                    <th>titre</th>
-                    <td>{{ episode.title }}</td>
-                </tr>
-                <tr>
-                    <th>Number</th>
-                    <td>{{ episode.number }}</td>
-                </tr>
-                 <tr>
-                    <th>synopsis</th>
-                    <td>{{ episode.synopsis }}</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div>
-            <a class="btn btn-danger" href="{{ path('season_show_season', {'id': season.id}) }}">Mise à jour</a>
-        </div>
-    </section>
-    <a class="btn btn-dark" href="{{ path('program_show_program',{'programName': season.program.slug}) }}">Retour à la série</a>
+    <h1>Episode</h1>
 
-    <section class="card text-dark m-3">
-        <div class="card-header bg-success">
-            <h3>Liste des épisodes</h3>
-        </div>
-        <div class="media">
-            <table class="table table-light table-striped table-bordered mt-3">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Série</th>
-                    <th>Episode</th>
-                    <th>Titre</th>
-                    <th>Voir</th>
-                    <th>Modifier</th>
-                    <th>Supprimer</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for episode in season.episodes %}
-                    <tr>
-                        <td>{{ season.program.title }}</td>
-                        <td>{{ episode.number }}</td>
-                        <td>{{ episode.title }}</td>
-                        <td>
-                            <a class="btn btn-success text-white" href="">Voir</a>
-                        </td>
-                        <td>
-                            <a class="btn btn-danger text-white" href="">Mettre à jour</a>
-                        </td>
-                        <td>
-                            
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="5">Aucun épisode de trouvé</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </section>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ episode.id }}</td>
+            </tr>
+            <tr>
+                <th>Title</th>
+                <td>{{ episode.title }}</td>
+            </tr>
+            <tr>
+                <th>Number</th>
+                <td>{{ episode.number }}</td>
+            </tr>
+            <tr>
+                <th>Synopsis</th>
+                <td>{{ episode.synopsis }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <a href="{{ path('episode_index') }}">back to list</a>
 
+    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
+
+    {{ include('episode/_delete_form.html.twig') }}
 {% endblock %}
-
