--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('program/_form.html.twig') }}
 
-    <a href="{{ path('Program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}">back to list</a>
 {% endblock %}
