--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,6 +13,7 @@
         <a class="nav-link" href="/Program/">Liste des Series</a>
         <a class="nav-link" href="/season/">Liste des saisons</a>
         <a class="nav-link" href="/episode/">Liste des episodes</a>
+        <a class="nav-link" href="/actor/">Liste des acteurs</a>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Genres
