--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -18,11 +18,12 @@
         <tbody>
         {% for episode in episodes %}
             <tr>
+            <td>{{ episode.season.program.title }}</td>
                 <td>{{ episode.id }}</td>
                 <td>{{ episode.title }}</td>
                 <td>{{ episode.number }}</td>
-                <td>{{ episode.synopsis }}</td>
-                <td>
+                
+                
                     <a href="{{ path('episode_show', {'id': episode.id}) }}">show</a>
                     <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
                 </td>
