--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -3,23 +3,16 @@
 {% block title %}All programs{% endblock %}
 
 {% block body %}
-
-    {% form_theme form 'bootstrap_4_layout.html.twig' %}
-    {{ form_start(form) }}
-    {{ form_row(form.searchField) }}
-    <button type="submit" name="btnSearch">Rechercher</button>
-    {{ form_end(form) }}
-
     <h1>Toutes les séries de la table program : </h1>
     {% for program in programs %}
         <div>
-            <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+            <h2>{{ loop.index }} / {{ program.title }} - 
+            Catégorie : {{ program.category.name }}</h2>
             <p>{{ program.summary }}</p>
         </div>
     {% else %}
         Aucune série trouvée.
     {% endfor %}
-
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
